DEV: removes id from component

--- a/javascripts/discourse/templates/components/locale-selector.hbs
+++ b/javascripts/discourse/templates/components/locale-selector.hbs
@@ -1,8 +1,8 @@
 <div class="controls">
   {{locale-combo-box
-    id="locale-selector"
     valueProperty="value"
     langProperty="value"
+    class="header-locale-selector"
     content=availableLocales
     value=currentUser.locale
     onChange=onChangeLocale
