--- a/javascripts/discourse/templates/components/locale-combo-box-row.hbs
+++ b/javascripts/discourse/templates/components/locale-combo-box-row.hbs
@@ -2,7 +2,7 @@
   {{d-icon icon translatedtitle=dasherizedTitle}}
 {{/each}}
 
-<img class="selected-locale-flag" src={{theme-setting imgSrc}}>
+<img class="selected-locale-flag" src={{theme-setting imgSrc}} />
 
 <span class="name">
   {{label}}
