--- a/javascripts/discourse/templates/components/locale-selector.hbs
+++ b/javascripts/discourse/templates/components/locale-selector.hbs
@@ -7,9 +7,6 @@
     value=currentUser.locale
     onChange=onChangeLocale
     defaultItem=defaultItem
-    options=(hash
-      filterable=true
-      none="user.locale.default"
-    )
+    options=(hash filterable=true none="user.locale.default")
   }}
 </div>
