DEV: Use angle-bracket

--- a/javascripts/discourse/components/locale-selector.hbs
+++ b/javascripts/discourse/components/locale-selector.hbs
@@ -1,12 +1,12 @@
 <div class="controls">
-  {{locale-combo-box
-    valueProperty="value"
-    langProperty="value"
-    class="header-locale-selector"
-    content=availableLocales
-    value=currentUser.locale
-    onChange=onChangeLocale
-    defaultItem=defaultItem
-    options=(hash filterable=true none="user.locale.default")
-  }}
+  <LocaleComboBox
+    @valueProperty="value"
+    @langProperty="value"
+    @class="header-locale-selector"
+    @content={{this.availableLocales}}
+    @value={{this.currentUser.locale}}
+    @onChange={{this.onChangeLocale}}
+    @defaultItem={{this.defaultItem}}
+    @options={{hash filterable=true none="user.locale.default"}}
+  />
 </div>
